samples/_failures_safe/1761529756_728aac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3bf8582b.c: In function ‘main’:
./samples/SAFE/__tmp_3bf8582b.c:143:40: error: expected ‘;’ at end of input
  143 |     for (int i = 0; i < word_count && i
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_3bf8582b.c:143:5: error: expected declaration or statement at end of input
  143 |     for (int i = 0; i < word_count && i
      |     ^~~
